// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots drawer controlled 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "color": "white",
        "fontSize": 24,
        "padding": 48,
      }
    }
  >
    <div>
      <button
        data-css-bzft25=""
        disabled={false}
        onClick={[Function]}
      >
        <span
          className="css-1en8fmq"
        >
          Toggle drawer
        </span>
      </button>
      <div>
        <div
          className="css-ann96s"
          onClick={[Function]}
        >
          <div>
            Drawer Base Here
          </div>
          <div
            className="css-qs2rg7"
          >
            <button
              className="css-8ba3lx"
              onClick={[Function]}
            >
              <div
                className="css-wunzjn"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
        <div
          className="css-kkhalp"
        >
          <div
            className="css-8nylan"
          >
            Drawer Content Here
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots drawer default 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "color": "white",
        "fontSize": 24,
        "padding": 48,
      }
    }
  >
    <div>
      <div
        className="css-owp8kf"
        onClick={[Function]}
      >
        <div>
          Drawer Base Here
        </div>
        <div
          className="css-qs2rg7"
        >
          <button
            className="css-8ba3lx"
            onClick={[Function]}
          >
            <div
              className="css-vdncv8"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
      <div
        className="css-1i2htk9"
      >
        <div
          className="css-8nylan"
        >
          Drawer Content Here
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots drawer using onToggle prop 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "color": "white",
        "fontSize": 24,
        "padding": 48,
      }
    }
  >
    <div>
      <div>
        <div
          className="css-owp8kf"
          onClick={[Function]}
        >
          <div>
            Drawer is 
            closed
          </div>
          <div
            className="css-qs2rg7"
          >
            <button
              className="css-8ba3lx"
              onClick={[Function]}
            >
              <div
                className="css-vdncv8"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
        <div
          className="css-1i2htk9"
        >
          <div
            className="css-8nylan"
          >
            Drawer Content Here
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots drawer with row component 1`] = `
<div
  style={
    Object {
      "background": "#181818",
      "backgroundSize": "cover",
      "bottom": 0,
      "left": 0,
      "overflow": "scroll",
      "position": "fixed",
      "right": 0,
      "top": 0,
      "transition": "background 300ms",
    }
  }
>
  <div
    style={
      Object {
        "color": "white",
        "fontSize": 24,
        "padding": 48,
      }
    }
  >
    <div>
      <div
        className="css-owp8kf"
        onClick={[Function]}
      >
        <div
          className="css-1fq8nx6"
        >
          <div
            className="css-1vfht4a"
          >
            <div
              className="css-7w4714"
            >
              <div
                className="css-js3ti3"
              >
                <div
                  className="css-y8jh93"
                />
              </div>
              <div
                className="css-kxulf3"
              >
                <div
                  className="css-1e23mlv"
                >
                  Look at me! I'm a &lt;Row /&gt;!
                </div>
                <div
                  className="css-gmo5z6"
                >
                  <span
                    className="css-1tz10dh"
                  >
                    Kitten McCatbuns
                  </span>
                  <span
                    aria-hidden={true}
                    className="css-kykfz1"
                  >
                    ·
                  </span>
                  <span
                    className="css-1tz10dh"
                  >
                    23 hours of cuteness
                  </span>
                </div>
              </div>
              <div
                className="css-1bg3chk"
              >
                <button
                  className="css-1eg2eyk"
                >
                  <div
                    className="css-otejxm"
                  >
                    <svg
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M6 14.5c-1.1046 0-2-.8954-2-2s.8954-2 2-2 2 .8954 2 2-.8954 2-2 2zm12 0c-1.1046 0-2-.8954-2-2s.8954-2 2-2 2 .8954 2 2-.8954 2-2 2zm-6 0c-1.1046 0-2-.8954-2-2s.8954-2 2-2 2 .8954 2 2-.8954 2-2 2z"
                      />
                    </svg>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-qs2rg7"
        >
          <button
            className="css-8ba3lx"
            onClick={[Function]}
          >
            <div
              className="css-vdncv8"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 15.41l-5-5L8.41 9 12 12.58 15.59 9 17 10.41"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
      <div
        className="css-1i2htk9"
      >
        <div
          className="css-8nylan"
        >
          Drawer Content Here
        </div>
      </div>
    </div>
  </div>
</div>
`;
